Serve docs with nginx reverse proxy
Circumvent CORS to be able to test API from swagger-ui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     command: nginx -g "daemon off;"
     links:
       - php
+      - swagger
     ports:
       - "80:80"
     volumes:
@@ -43,8 +44,6 @@ services:
       - dbdata:/var/lib/mysql
   swagger:
     image: swaggerapi/swagger-ui
-    ports:
-      - "8080:8080"
     environment:
       SWAGGER_JSON: /api/api.json
     volumes:
