--- a/images/nginx/nginx.conf
+++ b/images/nginx/nginx.conf
@@ -7,6 +7,8 @@ server {
       try_files $uri $uri/ /index.php?$query_string;
   }
 
+  location /api.json { alias /var/www/html/public/api.json; }
+
   location /index.php {
       include fastcgi_params;
       fastcgi_connect_timeout 10s;
@@ -14,5 +16,9 @@ server {
       fastcgi_buffers 256 4k;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
       fastcgi_pass php:9000;
+  }
+
+  location /docs {
+      proxy_pass http://swagger:8080/;
   }
 }
