--- a/images/nginx/nginx.conf
+++ b/images/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
       try_files $uri $uri/ /index.php?$query_string;
   }
 
-  location /api.json { alias /var/www/html/public/api.json; }
+  location /docs/api.json { alias /var/www/html/public/api.json; }
 
   location /index.php {
       include fastcgi_params;
@@ -19,6 +19,6 @@ server {
   }
 
   location /docs {
-      proxy_pass http://swagger:8080/;
+      proxy_pass http://swagger:8080;
   }
 }
